Fix minor alignments on dashboard (#5546)

--- a/server/webapp/WEB-INF/rails/app/assets/new_stylesheets/single_page_apps/pipeline_configs/_dashboard_view_tabs.scss
+++ b/server/webapp/WEB-INF/rails/app/assets/new_stylesheets/single_page_apps/pipeline_configs/_dashboard_view_tabs.scss
@@ -298,6 +298,7 @@ button {
 }
 
 .personalization-update-failed {
+  display: flex;
   .server-error-response {
     float: left;
   }
