--- a/server/webapp/WEB-INF/rails/app/assets/new_stylesheets/single_page_apps/pipeline_configs/_personalize_views_editor.scss
+++ b/server/webapp/WEB-INF/rails/app/assets/new_stylesheets/single_page_apps/pipeline_configs/_personalize_views_editor.scss
@@ -90,7 +90,6 @@ $icon-color: #647984;
     @include icon-before($type: close);
 
     position: absolute;
-    top:      20px;
     right:    20px;
     padding:  5px;
     cursor:   pointer;
